--- a/views/account_menuitem.xml
+++ b/views/account_menuitem.xml
@@ -334,16 +334,16 @@
 
             <!-- TODO: mejorar -->
             <!-- MENU: Informes/Libro IVA Digital Compras -->
-            <menuitem id="menu_account_purchase_vat_ledger"
+            <!-- <menuitem id="menu_account_purchase_vat_ledger"
                 name="Libro IVA Digital Compras"
                 action="l10n_ar_reports.action_account_purchase_vat_ledger"
-                sequence="4"/>
+                sequence="4"/> -->
 
             <!-- MENU: Informes/Libro IVA Digital Ventas -->
-            <menuitem id="menu_account_sale_vat_ledger"
+            <!-- <menuitem id="menu_account_sale_vat_ledger"
                 name="Libro IVA Digital Ventas"
                 action="l10n_ar_reports.action_account_sale_vat_ledger"
-                sequence="5"/>
+                sequence="5"/> -->
 
 
             <!-- MENU Facturacion/Informes/AFIP/Reporte Ultimos 12 Meses-->
